--- a/cocktailapp/tsconfig.spec.json
+++ b/cocktailapp/tsconfig.spec.json
@@ -4,11 +4,11 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine",
-      "node"
+      "node",
+      "jest"
     ]
   },
   "files": [
-    "src/test.ts",
     "src/polyfills.ts"
   ],
   "include": [
