Add jest testing for CocktailDbService

--- a/cocktailapp/package.json
+++ b/cocktailapp/package.json
@@ -40,6 +40,7 @@
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
     "@babel/core": "^7.6.2",
+    "@netbasal/spectator": "^3.12.0",
     "@storybook/angular": "^5.2.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -55,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-mocks": "^8.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
