--- a/cocktailapp/package.json
+++ b/cocktailapp/package.json
@@ -28,7 +28,9 @@
     "@fortawesome/angular-fontawesome": "^0.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/jest": "^24.0.18",
+    "bootstrap": "^4.3.1",
     "primeflex": "^1.0.0-rc.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
