--- a/cocktailapp/netlify.toml
+++ b/cocktailapp/netlify.toml
@@ -1,3 +1,4 @@
 [build]
-  command = "npm run build:prod"
-  publish = "dist"
+  command = "ng build --prod"
+  publish = "dist/cocktailapp"
+  base = "/"
