commit for ghpages deploy

--- a/cocktailapp/package.json
+++ b/cocktailapp/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/jest": "^24.0.18",
+    "angular-cli-ghpages": "^0.6.0",
     "bootstrap": "^4.3.1",
     "primeflex": "^1.0.0-rc.1",
     "rxjs": "~6.4.0",
